add the paginated version of list alerts api
