# api/v2/restapi/operations/alertmanager_api.go
@@ -36,6 +36,7 @@ import (
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/alert"
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/alertgroup"
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/alertgroupinfolist"
+	"github.com/prometheus/alertmanager/api/v2/restapi/operations/alertinfo"
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/general"
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/receiver"
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/silence"
@@ -76,7 +77,9 @@ func NewAlertmanagerAPI(spec *loads.Document) *AlertmanagerAPI {
 
 			return middleware.NotImplemented("operation alertgroup.GetAlertGroups has not yet been implemented")
 		}),
-
+		AlertinfoGetAlertInfosHandler: alertinfo.GetAlertInfosHandlerFunc(func(params alertinfo.GetAlertInfosParams) middleware.Responder {
+			return middleware.NotImplemented("operation alertinfo.GetAlertInfos has not yet been implemented")
+		}),
 		AlertGetAlertsHandler: alert.GetAlertsHandlerFunc(func(params alert.GetAlertsParams) middleware.Responder {
 			_ = params
 
@@ -160,6 +163,8 @@ type AlertmanagerAPI struct {
 	AlertgroupinfolistGetAlertGroupInfoListHandler alertgroupinfolist.GetAlertGroupInfoListHandler
 	// AlertgroupGetAlertGroupsHandler sets the operation handler for the get alert groups operation
 	AlertgroupGetAlertGroupsHandler alertgroup.GetAlertGroupsHandler
+	// AlertinfoGetAlertInfosHandler sets the operation handler for the get alert infos operation
+	AlertinfoGetAlertInfosHandler alertinfo.GetAlertInfosHandler
 	// AlertGetAlertsHandler sets the operation handler for the get alerts operation
 	AlertGetAlertsHandler alert.GetAlertsHandler
 	// ReceiverGetReceiversHandler sets the operation handler for the get receivers operation
@@ -259,6 +264,9 @@ func (o *AlertmanagerAPI) Validate() error {
 	}
 	if o.AlertgroupGetAlertGroupsHandler == nil {
 		unregistered = append(unregistered, "alertgroup.GetAlertGroupsHandler")
+	}
+	if o.AlertinfoGetAlertInfosHandler == nil {
+		unregistered = append(unregistered, "alertinfo.GetAlertInfosHandler")
 	}
 	if o.AlertGetAlertsHandler == nil {
 		unregistered = append(unregistered, "alert.GetAlertsHandler")
@@ -383,6 +391,10 @@ func (o *AlertmanagerAPI) initHandlerCache() {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
 	o.handlers["GET"]["/alerts/groups"] = alertgroup.NewGetAlertGroups(o.context, o.AlertgroupGetAlertGroupsHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/alertinfos"] = alertinfo.NewGetAlertInfos(o.context, o.AlertinfoGetAlertInfosHandler)
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
